--- a/FakeAemet.html
+++ b/FakeAemet.html
@@ -6,7 +6,7 @@
 <body>
 <div align="center">
 <h1>Buscador Aemet</h1>
-<form method="GET" action="http://www.aemet.es/es/buscador">
+<form method="GET" action="http://www.aemet.es/es/buscador" target="_blank">
 
 <p>Escriba el lugar donde quiere consultar el tiempo:</p>
 <br>
